# tim

./: .gitignore  LICENSE  README.md  config.example.toml  init.sql  pyproject.toml  requirements.txt  tim.py
tim/: __init__.py  __main__.py  app.py  command.py  db.py  group.py  help.py  init.py  list.py  log.py  new.py  print.py  tally.py  toggle.py
tim/commands/: __init__.py  abstract.py  amend.py  group.py  help.py  init.py  log.py  new.py  project.py  registry.py  rename.py  tally.py  toggle.py  total.py
